# agentic-workflows-demo

./: .gitignore  README.md  pyproject.toml
py-src/: 1_llm.ipynb  1_llm.py  2_llm_with_state.ipynb  2_llm_with_state.py  3_llm_with_memory.ipynb  3_llm_with_memory.py  4.1_llm_with_condition.ipynb  4.1_llm_with_condition.py  4_llm_with_condition.ipynb  4_llm_with_condition.py  5_agent.py  6_agent_stream.py  7_agent_prebuilt.py  9_agent_with_mcp.py  load_llm.py  python_primer.py  utils.py
py-src/server/: main.py
src/simple/: 4.1_llm_with_condition.ipynb
