[project]
name = "agent-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.7",
    "langgraph",
    "langchain-core",
    "typing-extensions",
    "dotenv>=0.9.9",
    "langchain[google-genai]>=0.3.26",
    "langchain-mcp-adapters>=0.1.9",
    "mcp>=1.12.0",
    "ipykernel>=6.30.0",
]
